# arya

./: README.md  colours.jl  pyproject.toml
Arya.jl/: Manifest.toml  Project.toml
Arya.jl/src/: Arya.jl  MeasurementsExt.jl  bandwidth.jl  cmap_arya.json  histogram.jl  journal.mplstyle  limits.jl  plots.jl  themes.jl
arya/: __init__.py  _globals.py
arya/figure/: __init__.py  colorbar.py  figure.py  grid.py  layout.py  legend.py  length.py  subplot.py
arya/plotting/: __init__.py  _plot_data.py  binnedplot.py  colorbar.py  histogram.py  medianplot.py
arya/style/: cmap.py  journal.mplstyle  style.py
arya_old/figure/: __init__.py  grid.py  layout.py  subfigure.py  subplot2.py
figure/: axis.py  figure.py  subplot.py
plotting/: scatter.py
style/: style.py
test/: context.py  grid_test.py
