[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arya_aeyobd"
version = "0.0.1"
authors = [
    { name="Daniel Boyea", email="boyea.2@osu.edu" },
]
description = "a small package for plotting things"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
    "arya/**/*.py",
    "arya/**/*.mplstyle",
]

[tool.hatch.build.targets.wheel]
packages = ["arya"]
